compiler/testData/diagnostics/tests/backingField/ReadInFunction.kt
class ReadByAnotherPropertyInitializer() {
    val a = 1
    fun ff() = <!BACKING_FIELD_USAGE_DEPRECATED!>$a<!>
}
